fix: keep mobile header above nav drawer and remove drawer top gap

--- a/src/cook-web/src/app/c/[[...id]]/Components/ChatMobileHeader.module.scss
+++ b/src/cook-web/src/app/c/[[...id]]/Components/ChatMobileHeader.module.scss
@@ -12,7 +12,7 @@
   height: 76px;
   width: 100%;
   box-sizing: border-box;
-
+  border-bottom: 1px solid #e5e5e5;
   .logo {
     height: 32px;
   }
