--- a/src/cook-web/src/app/c/[[...id]]/Components/ChatUi/ListenModeRenderer.scss
+++ b/src/cook-web/src/app/c/[[...id]]/Components/ChatUi/ListenModeRenderer.scss
@@ -15,6 +15,8 @@
   &.mobile {
     padding: 0 !important;
     height: 100%;
+    min-height: 0;
+    flex: 1 1 auto;
     overflow: hidden;
     overflow-y: hidden !important;
 
