--- a/src/cook-web/src/app/c/[[...id]]/page.module.scss
+++ b/src/cook-web/src/app/c/[[...id]]/page.module.scss
@@ -9,7 +9,7 @@
   .chatMobileHeader {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 50;
     flex: 0 0 76px;
     flex-shrink: 0;
     min-height: 76px;
